--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,7 +1,11 @@
 [display]
-size = (1920, 1080)
+size = (1280, 720)
 fps = None
 fullscreen = False
-caption = 'SloOS 2000'
+caption = 'Slo Ogünemay'
 icon = pygame.image.load('./slo/slo/logo.png')
 hud = False
+
+[appearance]
+font = './res/font/AppleSDGothicNeoSB.ttf'
+motion_speed = 10
