--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,6 +1,6 @@
 [display]
-size = (1280, 720)
-fps = None
+size = (1920, 1080)
+fps = 60
 fullscreen = False
 caption = 'Slo Ogünemay'
 icon = pygame.image.load('./slo/slo/logo.png')
