Slo Ogünemay Iv
컴퓨터 바뀔때마다 `slo\lso.ini` 수정해야 하는 거 그냥 켜도 되게 함. 근데 모니터 바꾼 거는 안잡아서 그건 좀 생각 해 봐야 됨ㅋ ㅋㅋㅌㅋ.., 안타깝고

--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,11 +1,12 @@
 [display]
-size = (1920, 1080)
+size = (2560, 1440)
 fps = 60
-fullscreen = False
+fullscreen = True
 caption = 'Slo Ogünemay'
-icon = pygame.image.load('./slo/slo/logo.png')
+icon_path = './slo/slo/logo.png'
 hud = False
 
 [appearance]
 font = './res/font/AppleSDGothicNeoSB.ttf'
 motion_speed = 10
+
