--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,7 +1,7 @@
 [display]
-size = (2560, 1440)
+size = (1600, 900)
 fps = 60
-fullscreen = True
+fullscreen = False
 caption = 'Slo Ogünemay'
 icon_path = './slo/slo/logo.png'
 hud = False
