Slo Ogünemay II

--- a/slo/bucker.ini
+++ b/slo/bucker.ini
@@ -3,3 +3,7 @@ type = 'image'
 color = (89, 111, 253)
 image_path = './slo/bucker/background.png'
 
+[window]
+background_color = (222, 222, 222)
+border_color = (31, 33, 37)
+
