Slo Ogünemay IIix
오늘은 여기까지!

--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,10 +1,10 @@
 [display]
-size = (2560, 1440)
+size = (1920, 1080)
 fps = 60
-fullscreen = True
+fullscreen = False
 caption = 'Slo Ogünemay'
 icon_path = './slo/slo/logo.png'
-hud = False
+hud = True
 
 [appearance]
 font = './res/font/AppleSDGothicNeoSB.ttf'
