--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -4,7 +4,7 @@ fps = 60
 fullscreen = False
 caption = 'Slo Ogünemay'
 icon_path = './slo/slo/logo.png'
-hud = True
+hud = False
 
 [appearance]
 font = './res/font/AppleSDGothicNeoSB.ttf'
