--- a/slo/bucker.ini
+++ b/slo/bucker.ini
@@ -7,3 +7,7 @@ image_path = './slo/bucker/background.png'
 background_color = (222, 222, 222)
 border_color = (31, 33, 37)
 
+[dock]
+background_color = (0, 0, 0)
+opacity = 77
+
