--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,7 +1,7 @@
 [display]
-size = (1920, 1080)
+size = (2560, 1440)
 fps = 60
-fullscreen = False
+fullscreen = True
 caption = 'Slo Ogünemay'
 icon_path = './slo/slo/logo.png'
 hud = False
