--- a/slo/bucker.ini
+++ b/slo/bucker.ini
@@ -10,4 +10,5 @@ border_color = (31, 33, 37)
 [dock]
 background_color = (0, 0, 0)
 opacity = 77
+items = ["self.DockItem(pygame.image.load('./res/image/icon/window.png'), (add_object, BuckerWindow), '__init__.BuckerWindow', self)", "self.DockItem(pygame.image.load('./res/image/icon/surfer.png'), (add_object, Surfer, Surfer.right), '서퍼', self)", "self.DockItem(pygame.image.load('./res/image/icon/shutdown.png'), (add_object, Shutdown), '시스템 종료', self)"]
 
