--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,8 +1,8 @@
 [display]
-size = (2560, 1440)
+size = (1920, 1080)
 fps = None
-fullscreen = True
-caption = 'Slo Ogünemay'
+fullscreen = False
+caption = 'Slo Ogunemay'
 icon_path = './slo/slo/logo.png'
 hud = False
 
