--- a/slo/surfer.ini
+++ b/slo/surfer.ini
@@ -1,3 +1,3 @@
 [item]
-items = ["self.Button(pygame.image.load('./res/image/icon/window.png'), 'BuckerWindow', self, command=(self.start, BuckerWindow, 600, 400, 600, 400))", "self.Button(pygame.image.load('./res/image/icon/shutdown.png'), 'Back', self, command=(self.quit,))"]
+items = ["self.Button(pygame.image.load('./res/image/icon/window.png'), 'a.dmn', self, command=(self.start, BuckerWindow, './res/system/a.dmn'))", "self.Button(pygame.image.load('./res/image/icon/shutdown.png'), 'Back', self, command=(self.quit,))"]
 
