--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,12 +1,13 @@
 [display]
-size = (1920, 1080)
+size = (2560, 1440)
 fps = None
-fullscreen = False
+fullscreen = True
 caption = 'Slo Ogunemay'
 icon_path = './slo/slo/logo.png'
 hud = False
 
 [appearance]
 font = './res/font/AppleSDGothicNeoSB.ttf'
+domino_font = './res/font/consola.ttf'
 motion_speed = 10
 
