--- a/slo/bucker.ini
+++ b/slo/bucker.ini
@@ -5,7 +5,8 @@ image_path = './slo/bucker/background.png'
 
 [window]
 background_color = (222, 222, 222)
-border_color = (31, 33, 37)
+normal_border_color = (41, 43, 47)
+highlighted_border_color = (31, 33, 37)
 
 [dock]
 background_color = (0, 0, 0)
