--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -4,7 +4,7 @@ fps = None
 fullscreen = True
 caption = 'Slo Ogunemay'
 icon_path = './slo/slo/logo.png'
-hud = False
+hud = True
 
 [appearance]
 font = './res/font/AppleSDGothicNeoSB.ttf'
