--- a/slo/bucker.ini
+++ b/slo/bucker.ini
@@ -13,3 +13,7 @@ background_color = (0, 0, 0)
 opacity = 77
 items = ["self.DockItem(pygame.image.load('./res/image/icon/surfer.png'), (add_object, Surfer, Surfer.right), '서퍼', self)", "self.DockItem(pygame.image.load('./res/image/icon/shutdown.png'), (add_object, Shutdown), '시스템 종료', self)"]
 
+[input]
+key_drill_delay = 0.5
+key_drill_loop_delay = 0.02
+
