--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -11,3 +11,6 @@ font = './res/font/AppleSDGothicNeoSB.ttf'
 domino_font = './res/font/consola.ttf'
 motion_speed = 10
 
+[metadata]
+version = 'Slo Ogunemay VI'
+
