--- a/slo/surfer.ini
+++ b/slo/surfer.ini
@@ -1,3 +1,3 @@
 [item]
-items = ["self.Button(pygame.image.load('./res/image/icon/window.png'), 'a.dmn', self, command=(self.start, BuckerWindow, './res/system/a.dmn'))", "self.Button(pygame.image.load('./res/image/icon/left_arrow.png'), 'Back', self, command=(self.quit,))"]
+items = ["self.Button(pygame.image.load('./res/image/icon/left_arrow.png'), 'Back', self, command=(self.quit,))", "self.Button(pygame.image.load('./res/image/icon/window.png'), 'a.dmn', self, command=(self.start, BuckerWindow, './res/system/a.dmn'))", "self.Button(pygame.image.load('./res/image/icon/setting.png'), '설정', self, command=(self.start, Setting))"]
 
