--- a/slo/bucker.ini
+++ b/slo/bucker.ini
@@ -11,7 +11,7 @@ highlighted_border_color = (31, 33, 37)
 [dock]
 background_color = (0, 0, 0)
 opacity = 77
-items = ["self.DockItem(pygame.image.load('./res/image/icon/surfer.png'), (add_object, Surfer, Surfer.right), '서퍼', self)", "self.DockItem(pygame.image.load('./res/image/icon/setting.png'), (add_object, Setting), '설정', self)", "self.DockItem(pygame.image.load('./res/image/icon/shutdown.png'), (add_object, Shutdown), '시스템 종료', self)"]
+items = ["self.DockItem(pygame.image.load('./res/image/icon/surfer.png'), (rootobject.add_object, surfer.Surfer, surfer.Surfer.right), '서퍼', self)", "self.DockItem(pygame.image.load('./res/image/icon/setting.png'), (rootobject.add_object, setting.Setting), '설정', self)", "self.DockItem(pygame.image.load('./res/image/icon/shutdown.png'), (rootobject.add_object, shutdown.Shutdown), '시스템 종료', self)"]
 
 [input]
 key_drill_delay = 0.5
