--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,7 +1,7 @@
 [display]
-size = (2560, 1440)
+size = (1920, 1080)
 fps = None
-fullscreen = True
+fullscreen = False
 caption = 'Slo Ogunemay'
 icon_path = './slo/slo/logo.png'
 hud = False
