--- a/slo/bucker.ini
+++ b/slo/bucker.ini
@@ -17,3 +17,8 @@ items = ["self.DockItem(pygame.image.load('./res/image/icon/surfer.png'), (rooto
 key_drill_delay = 0.5
 key_drill_loop_delay = 0.02
 
+[cursor]
+normal = './res/image/cursor/cursor0.png'
+pressed = './res/image/cursor/cursor1.png'
+height = 30
+
