--- a/slo/bucker.ini
+++ b/slo/bucker.ini
@@ -18,7 +18,10 @@ key_drill_delay = 0.5
 key_drill_loop_delay = 0.02
 
 [cursor]
-normal = './res/image/cursor/cursor0.png'
-pressed = './res/image/cursor/cursor1.png'
+directory = './res/image/cursor'
+extension = 'png'
+normal = 'cursor'
+resize_width = 'resize_width'
+resize_height = 'resize_height'
 height = 30
 
