--- a/slo/slo.ini
+++ b/slo/slo.ini
@@ -1,6 +1,6 @@
 [display]
 size = (2560, 1440)
-fps = None
+fps = 144
 fullscreen = True
 caption = 'Slo Ogunemay'
 icon_path = './slo/slo/logo.png'
